# kalman-filter

./: CMakeLists.txt  FindISPC.cmake
include/: test.h
include/ROOT_Ttree_io/: event_reader.h  event_writer.h  myLinkDef.h
include/ispc/: KalmanFilter.h  KalmanFilter.ispc.h
include/serial/: KalmanFilterSerial.h  common.h  common_gsl.h  gemm.h
ispc/: KalmanFilter.ispc
src/: kalman_benchmark.cpp  synthetic_benchmark.cpp  unit_tests.cpp
src/ROOT_Ttree_io/: CMakeLists.txt  Makefile  event_reader.cpp  event_writer.cpp  mydict.h
src/serial/: KalmanFilterSerial.cpp  gemm.cpp
